# IA_agent_simulation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/actions/: p2p_action_definitions.yaml
configs/agents/: p2p_agents.yaml
configs/controls/: p2p_controls.yaml
configs/org/: approval_matrix.yaml  delegation_rules.yaml  sod_policies.yaml  user_master.yaml
configs/run_configs/: baseline.yaml  branching_baseline.yaml  llm_baseline.yaml  llm_variant_a.yaml  variant_a.yaml
configs/scenarios/: p2p_scenarios.yaml
configs/variants/: p2p_control_variants.yaml
data/synthetic/: ground_truth_labels.yaml  org_units.csv  purchase_needs.csv  vendors.csv
docs/: branching_alias_residual_review_notes.md  branching_control_stress_test_policy_memo.md  branching_hint_ablation_validation_notes.md  branching_llm_validation_notes.md  first_vertical_slice_implementation_notes.md  internal_control_llm_agent_poc.md  poc_prototype_design.md
runs/RUN-S002-BASELINE/: behavior_replay_log.jsonl  detector_annotations.jsonl  evaluation_results.json  events.jsonl  finding_report.md  findings.json  metrics.json  run_manifest.json
runs/RUN-S002-LLM-BASELINE/: behavior_replay_log.jsonl  detector_annotations.jsonl  events.jsonl  finding_report.md  findings.json  llm_action_decisions.jsonl  llm_action_review_report.md  llm_calls.jsonl  run_manifest.json
runs/RUN-S002-LLM-VARIANT-A/: action_selection_metrics.json  behavior_replay_log.jsonl  (+9 more)
tests/: test_committed_outputs.py  test_config.py  test_first_slice.py  test_llm_action_selection.py
ui/: streamlit_app.py
(+2859 files in other folders)
