[project]
name = "ia-agent-simulation"
version = "0.1.0"
description = "Internal control LLM agent simulation PoC for purchase-to-pay controls."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.35",
]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
